[gd_scene load_steps=31 format=3 uid="uid://djpc7mnl2o7hd"]

[ext_resource type="Script" path="res://slime_control.gd" id="1_mpgcv"]
[ext_resource type="Shader" path="res://Nodes/objetos/dark_zone_2.gdshader" id="2_hri26"]
[ext_resource type="Texture2D" uid="uid://j7v7fhcquc7w" path="res://Sprites/Enemys/slime_control.png" id="2_hs1u7"]
[ext_resource type="Texture2D" uid="uid://dvb374cri6udw" path="res://Sprites/effects/pixel-1x4.png" id="3_2popm"]
[ext_resource type="Texture2D" uid="uid://4gkf8xyocmuv" path="res://Sprites/Objetos/zona_escura_base.png" id="3_pucta"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yp1sh"]
shader = ExtResource("2_hri26")
shader_parameter/outline_width = null
shader_parameter/lower_limit = null
shader_parameter/upper_limit = null
shader_parameter/color = null

[sub_resource type="AtlasTexture" id="AtlasTexture_kfyvh"]
atlas = ExtResource("2_hs1u7")
region = Rect2(36, 0, 9, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqch7"]
atlas = ExtResource("2_hs1u7")
region = Rect2(36, 0, 9, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdtie"]
atlas = ExtResource("2_hs1u7")
region = Rect2(45, 0, 9, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytmdg"]
atlas = ExtResource("2_hs1u7")
region = Rect2(54, 0, 9, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_235x0"]
atlas = ExtResource("2_hs1u7")
region = Rect2(63, 0, 9, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_no08k"]
atlas = ExtResource("2_hs1u7")
region = Rect2(0, 0, 9, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3brlv"]
atlas = ExtResource("2_hs1u7")
region = Rect2(9, 0, 9, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms1mt"]
atlas = ExtResource("2_hs1u7")
region = Rect2(18, 0, 9, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub6et"]
atlas = ExtResource("2_hs1u7")
region = Rect2(27, 0, 9, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_lxsxw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfyvh")
}],
"loop": true,
"name": &"Indie_control",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqch7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdtie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytmdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_235x0")
}],
"loop": true,
"name": &"control_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_no08k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3brlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms1mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub6et")
}],
"loop": true,
"name": &"off_control_walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jcja2"]
size = Vector2(7, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kkgug"]
size = Vector2(7.13333, 5.06667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b46o3"]
size = Vector2(9.1, 6.6)

[sub_resource type="Curve" id="Curve_yps8f"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_fvndj"]
colors = PackedColorArray(0.952941, 0.666667, 0.25098, 0.309804, 0, 0, 0, 0.392157)

[sub_resource type="Curve" id="Curve_dd1do"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_anqjj"]
offsets = PackedFloat32Array(0, 0.822222, 1)
colors = PackedColorArray(0.952941, 0.666667, 0.25098, 1, 0, 0, 0, 0.258824, 0, 0, 0, 0)

[sub_resource type="Curve" id="Curve_0a22j"]
max_value = 3.0
_data = [Vector2(0, 0.916981), 0.0, 0.0, 0, 0, Vector2(1, 2.32075), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_my31f"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iemwv"]
size = Vector2(11.8667, 7.4)

[sub_resource type="Animation" id="Animation_c5xvi"]
resource_name = "on"
loop_mode = 2
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_iphf8"]
resource_name = "off"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wi4a5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3sfc"]
_data = {
"RESET": SubResource("Animation_wi4a5"),
"off": SubResource("Animation_iphf8"),
"on": SubResource("Animation_c5xvi")
}

[node name="Slime_control" type="CharacterBody2D"]
scale = Vector2(15, 15)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_mpgcv")

[node name="PointLight2D" type="PointLight2D" parent="."]
material = SubResource("ShaderMaterial_yp1sh")
position = Vector2(0.0666656, 1.53333)
color = Color(1, 0.8, 0, 1)
energy = 0.0
texture = ExtResource("3_pucta")
texture_scale = 0.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -0.1)
sprite_frames = SubResource("SpriteFrames_lxsxw")
animation = &"Indie_control"
frame_progress = 0.696146

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9.53674e-08, 1.4)
shape = SubResource("RectangleShape2D_jcja2")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-0.0333332, 1.4)
shape = SubResource("RectangleShape2D_kkgug")
debug_color = Color(0.92549, 0.27451, 0, 0.0392157)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0.0499999, 1.2)
shape = SubResource("RectangleShape2D_b46o3")
debug_color = Color(0.639337, 0.525614, 0, 0)

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2(0, 1.8)
emitting = false
amount = 16
lifetime = 0.4
one_shot = true
explosiveness = 1.0
randomness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 25.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
linear_accel_min = -100.0
linear_accel_max = 100.0
scale_amount_min = 10.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_yps8f")
color_ramp = SubResource("Gradient_fvndj")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 1.8)
emitting = false
amount = 32
lifetime = 0.4
one_shot = true
explosiveness = 1.0
randomness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 25.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
linear_accel_min = -100.0
linear_accel_max = 100.0
scale_amount_min = 10.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_dd1do")
color_ramp = SubResource("Gradient_anqjj")

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
emitting = false
amount = 6
lifetime = 0.5
one_shot = true
speed_scale = 1.01
explosiveness = 1.0
texture = ExtResource("3_2popm")
particle_flag_align_y = true
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 30.0
scale_amount_min = 10.0
scale_amount_max = 10.0
split_scale = true
scale_curve_x = null
scale_curve_y = SubResource("Curve_0a22j")
color_ramp = SubResource("Gradient_my31f")

[node name="Control_area" type="Area2D" parent="."]
position = Vector2(-0.0666667, 0)
collision_layer = 0
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control_area"]
z_index = -2
position = Vector2(0.2, 0.833334)
shape = SubResource("RectangleShape2D_iemwv")
debug_color = Color(0.67, 0.5025, 0, 0.145098)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y3sfc")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="Control_area" to="." method="_on_control_area_area_entered"]
